[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "puntgun"
version = "0.1.0"
description = "A configurable automation command line tool for Twitter."
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dynaconf<4.0.0,>=3.1.9",
    "tweepy<5.0.0,>=4.10.0",
    "reactivex<5.0.0,>=4.0.4",
    "cryptography<38.0.0,>=37.0.4",
    "loguru<1.0.0,>=0.6.0",
    "pydantic<2.0.0,>=1.9.2",
    "orjson<4.0.0,>=3.7.12",
    "click>=8.1.3",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop"
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.urls]
"Homepage" = "https://github.com/boholder/puntgun"
"Bug Tracker" = "https://github.com/boholder/puntgun/issues"
"Discussions" = "https://github.com/boholder/puntgun/discussions"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.2",
    "PyHamcrest<3.0.0,>=2.0.4",
]

[tool.pdm.build]
includes = []

[tool.pytest.ini_options]
pythonpath = ["puntgun", "tests"]

# Coveralls job in github action needs this config
[tool.coverage.run]
relative_files = true

# The key config for building executable wheel
# https://github.com/pypa/pipx#where-does-pipx-install-apps-from
# https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html#the-console-scripts-entry-point
# https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
[project.scripts]
puntgun = "puntgun.__main__:cli"