[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "puntgun"
version = "0.0.1"
description = "A configurable automation command line tool for Twitter."
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    # for loading config from env, files...
    "dynaconf<4.0.0,>=3.1.9",
    # Twitter client library
    "tweepy<5.0.0,>=4.12.0",
    # ...runtime? combining steps into a processing pipeline
    "reactivex<5.0.0,>=4.0.4",
    # for encrypto stuff
    "cryptography<38.0.0,>=37.0.4",
    # logging library
    "loguru<1.0.0,>=0.6.0",
    # for converting DTO between structured text and class instances
    "pydantic<2.0.0,>=1.9.2",
    # json parsing library
    "orjson<4.0.0,>=3.7.12",
    # CLI library
    "click>=8.1.3",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
]
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.urls]
"Homepage" = "https://github.com/boholder/puntgun"
"Bug Tracker" = "https://github.com/boholder/puntgun/issues"
"Discussions" = "https://github.com/boholder/puntgun/discussions"

[tool.pdm.dev-dependencies]
test = [
    "pytest<8.0.0,>=7.1.2",
    "PyHamcrest<3.0.0,>=2.0.4",
    "coverage[toml]>=6.4.4",
    "setuptools>=65.3.0",
]
lint = [
    "pre-commit>=2.20.0",
]
doc = [
    # Theme
    "mkdocs-material>=8.4.2",
    # https://github.com/mkdocstrings/python
    "mkdocstrings[python]>=0.7.1",
    # https://github.com/cmacmackin/markdown-include
    "markdown-include>=0.7.0",
    # This tool helps us update documentation website on git "gh-pages" branch
    # https://github.com/jimporter/mike
    "mike>=1.1.2",
    # https://github.com/rmariuzzo/markdown-exec
    "markdown-exec>=0.7.2",
    "setuptools>=65.3.0",
]

[tool.pdm.build]
excludes = ["./**/.git"]
source-includes = [
    "tests",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md"
]

# Scripts for development
[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"

[tool.pdm.scripts.doc]
shell = "cd docs && mkdocs serve"
help = "Start the dev server for doc preview"

[tool.pdm.scripts.coverage]
shell = "coverage run -m pytest tests && coverage html"
help = "Open the index.html with browser to check coverage"

[tool.pytest.ini_options]
pythonpath = ["puntgun", "tests"]
testpaths = [
    "tests/",
]

# Coveralls job in github action needs this config
[tool.coverage.run]
relative_files = true

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html?highlight=%5Btool.black%5D#configuration-format
[tool.black]
line-length = 120

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["puntgun"]
known_third_party = [
    "pytest",
]

# The key config for building executable wheel
# https://github.com/pypa/pipx#where-does-pipx-install-apps-from
# https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html#the-console-scripts-entry-point
# https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
[project.scripts]
puntgun = "puntgun.__main__:cli"